--- a/Tumult Hype Documentation-3_0-Chinese/index.html
+++ b/Tumult Hype Documentation-3_0-Chinese/index.html
@@ -186,8 +186,8 @@
               </div>
               <div class=category>
                 <div class=icon17></div>
-                <div class=name> Physics 物理</div>
-                <div class=description> Physics offers you control over an element’s physical properties – bounce, friction, air drag, and density – and over the scene’s gravity. 物理为用户提供了控制元素物理性质的工具，他能控制像 反弹、摩擦、（空气阻力？）和密度等性质，并且还能给场景添加重力。</div>
+                <div class=name> Physics 物理量</div>
+                <div class=description> Physics offers you control over an element’s physical properties – bounce, friction, air drag, and density – and over the scene’s gravity. 物理量为用户提供了控制元素物理性质的工具，他能控制像 反弹、摩擦、（空气阻力？）和密度等性质，并且还能给场景添加重力。</div>
                 <div class=links>
                   <ul>
                     <li> <a href="#scene-physics-gravity">Scene Physics Gravity</a> </li>
@@ -211,13 +211,13 @@
               </div>
               <div class=category>
                 <div class=icon5></div>
-                <div class=name> Typography </div>
-                <div class=description> Text and font controls, Google Fonts & Custom Fonts Support. </div>
+                <div class=name>  排印</div>
+                <div class=description> 文本和字体控制器，支持Google Fonts和自定义字体。</div>
                 <div class=links>
                   <ul>
-                    <li> <a href="#choosing-fonts">Choosing Fonts</a> </li>
-                    <li> <a href="#adding-fonts">Adding Fonts</a> </li>
-                    <li> <a href="#copying-fonts">Copying Fonts</a> </li>
+                    <li> <a href="#choosing-fonts"> 选择字体</a> </li>
+                    <li> <a href="#adding-fonts"> 添加字体</a> </li>
+                    <li> <a href="#copying-fonts">复制字体</a> </li>
                   </ul>
                 </div>
               </div>
@@ -325,9 +325,9 @@
                     <li> <a href="#symbol-inspector">Symbol Inspector</a> </li>
                     <li> <a href="#metrics-inspector">Metrics Inspector</a> </li>
                     <li> <a href="#element-inspector">  元素检查器</a> </li>
-                    <li> <a href="#text-inspector">Typography Inspector</a> </li>
+                    <li> <a href="#text-inspector">排印检查器</a> </li>
                     <li> <a href="#actions-inspector">  动作检查器</a> </li>
-                    <li> <a href="#identity-inspector">Identity Inspector</a> </li>
+                    <li> <a href="#identity-inspector">身份检查器</a> </li>
                   </ul>
                 </div>
               </div>
@@ -364,57 +364,57 @@
       <h1 id=overview>Overview概览</h1>
       <p>Tumult Hype 3 是一个OS X下的HTML5创意应用。由Hype创建的交互性内容和动画可以在桌面电脑、智能手机、iPad等上运行。</p>
       <p>用Hype创造令人惊叹的美丽动画来震惊您的网页访问者吧！</p>
-      <p>Tumult Hype is an HTML5 authoring tool. What is commonly referred to as “HTML5” is really a platform of technologies including the latest HTML tags, CSS styles, and improved JavaScript performance. HTML5’s capabilities allow for stunning visual effects and smooth animations, but previously required difficult hand-coding. There were no designer-friendly tools for building animated HTML5 content… until Tumult Hype.</p>
-      <p>Tumult Hype’s powerful keyframe-based animations bring your content to life and outputs state-of-the-art HTML5 that works on all modern browsers and mobile devices like iPhones and iPads. No coding required.</p>
-      <h3 id=tumult-hype-professional>Tumult Hype Professional</h3>
-      <p>Tumult Hype Professional is available as an in-app purchase and adds many powerful features to Hype 3:</p>
+      <p>Hype是一个HTML5创作工具。通常对于HTML5的定义是指包含最新的HTML标签、CSS样式以及改进的JavaScript性能等技术的平台。HTML5的可能性能够让出色的视觉效果和平滑的动画成为可能，但是在以前，要实现这些就需要艰难的手工编写代码。在这之前没有对与设计友好的编写HTML5内容的工具，直到Tumult Hype出现。</p>
+      <p>Tumult Hype’s powerful keyframe-based animations bring your content to life and outputs state-of-the-art HTML5 that works on all modern browsers and mobile devices like iPhones and iPads. No coding required.Tumult Hype的强大的基于关键帧的动画能把用户的</p>
+      <h3 id=tumult-hype-professional>Tumult Hype Professional Hype专业版</h3>
+      <p>Tumult Hype Professional is available as an in-app purchase and adds many powerful features to Hype 3:可以通过应用内购买给Hype3添加Tumult Hype专业版。</p>
       <ul>
-        <li>Responsive Layouts</li>
+        <li>Responsive Layouts响应式布局</li>
         <li>Physics</li>
         <li>Symbols for creating reusable elements</li>
         <li>Persistent Symbols for master content</li>
-        <li>Dark interface theme</li>
+        <li>Dark interface theme 黑色主题</li>
         <li>Editable timing functions</li>
-        <li>Grid system</li>
+        <li>Grid system 网格系统</li>
         <li>Rearrangeable interface</li>
-        <li>Templates</li>
+        <li>Templates 模版</li>
         <li>Behaviors</li>
         <li>OAM widget export</li>
       </ul>
-      <h3 id=tumult-hype-professional-interface>Tumult Hype Professional Interface</h3>
+      <h3 id=tumult-hype-professional-interface>Tumult Hype Professional Interface Tumult Hype专业版界面</h3>
       <p><img class=center src="images/bg.png" data-src="images/overview-prolayout.jpg" data-src-retina="images/overview-prolayout@2x.jpg" width=750 height=450 alt=""/> </p>
-      <p>This user guide walks you through the entire product, and gives in-depth details on the workings of both Tumult Hype and Tumult Hype Professional. To help distinguish between Standard and Professional features, all documentation chapters or sections covering Professional features begin with the following label:</p>
+      <p>This user guide walks you through the entire product, and gives in-depth details on the workings of both Tumult Hype and Tumult Hype Professional. To help distinguish between Standard and Professional features, all documentation chapters or sections covering Professional features begin with the following label:本用户指南让用户能够了解整个应用，并且给予Hype和Hype专业版深度细节。为了便于区分标准版和专业版特色功能，所有包括的专业版特色功能的文档章节或者分段都有以下标签：</p>
       <p>
-      <a href="//tumult.com/hype/" alt="Learn More" title="Learn More" class=profeature>HYPE PRO ONLY<br>
+      <a href="//tumult.com/hype/" alt="Learn More" title="Learn More" class=profeature>HYPE PRO ONLY 仅适用Hype专业版<br>
       <div class=profeaturebottom></div>
       </a>
       </p>
-      <p>Any chapters or sections without this label cover features available in both Tumult Hype and Tumult Hype Professional.</p>
+      <p>Any chapters or sections without this label cover features available in both Tumult Hype and Tumult Hype Professional.任何没有这些标签的章节或者分段适用于标准版和专业版。</p>
       <h2 id=the-tumult-hype-interface>The Tumult Hype Interface</h2>
       <p><a href="//tumult.com/hype/documentation/3.0/documents/InterfaceOverview.html" target=_blank><img class=center src="images/bg.png" data-src="images/InterfaceOverview.png" data-src-retina="images/InterfaceOverview@2x.png" width=1239 height=955 alt=""/></a></p>
-      <p>Tumult Hype also provides numerous inspectors for manipulating the document, scenes and elements. These are discussed in depth in the <a href="#inspectors">Inspectors</a> chapter.</p>
+      <p> Hype也提供了许多检查器，用户可以使用它们来调整文档、场景和元素。我们将会在<a href="#inspectors">检查器</a>章节深入讨论。</p>
       <h3 id=tumult-hype-professional-interface>Tumult Hype Professional Interface</h3>
-      <p>Two features unlocked by the Tumult Hype Professional in-app purchase are the Professional Dark theme and a customizable user interface. </p>
+      <p>在Hype专业版中解锁的两个功能是专业版深色主题和定制化主题。</p>
       <p><img class=center src="images/bg.png" data-src="images/OverviewProfessionalDarkandLightInterface.png" data-src-retina="images/OverviewProfessionalDarkandLightInterface@2x.png" width=700 height=316 alt=""/></p>
-      <h5 id=the-professional-dark-and-standard-interface-themes>The Professional Dark and Standard Interface themes</h5>
-      <p>If you prefer, you can switch back to the Standard theme in Tumult Hype&rsquo;s General preferences.</p>
-      <p>Click and drag the customizable view handles on the Inspector, Scene and Layouts selector, or the Timeline to arrange Tumult Hype&rsquo;s as you see fit.</p>
+      <h5 id=the-professional-dark-and-standard-interface-themes>专业版深色主题和标准版界面主题</h5>
+      <p>如果你希望切换回标准版主题，你可以在通用偏好设置中切换。</p>
+      <p>Click and drag the customizable view handles on the Inspector, Scene and Layouts selector, or the Timeline to arrange Tumult Hype&rsquo;s as you see fit.你可以通过在检查器、场景、布局（选择器）或者时间线上点击和拖动定制主题手柄来完成令你满意的界面。</p>
       <p><img src="images/bg.png" data-src="images/overview-interface-drag.png" data-src-retina="images/overview-interface-drag@2x.png" width=750 height=450 /> </p>
-      <h5 id=the-customizable-view-handle>The Customizable View Handle</h5>
+      <h5 id=the-customizable-view-handle>The Customizable View Handle定制界面控制手柄</h5>
       <p>As you drag a view around, Tumult Hype highlights nearby drop regions.</p>
       <h2 id=key-terms>Key Terms</h2>
       <p>There are seven basic key terms to learn for using Tumult Hype: Scenes, Elements, Properties, Keyframes, Animations, Timelines, and Actions. The remainder of the user guide will reference these terms, and by sticking with them you’ll be fluent when conversing with other Tumult Hype users.</p>
-      <h3 id=a-hrefscenesscenesa><a href="#scenes">Scenes</a></h3>
-      <p>Each Tumult Hype document is composed of one or more scenes. Scenes are analogous to slides in a Keynote or PowerPoint presentation, or to cards in HyperCard. Scenes contain elements and timelines. Actions are used to transition between different scenes.</p>
+      <h3 id=a-hrefscenesscenesa><a href="#scenes">Scenes 场景</a></h3>
+      <p>每一个Tumult Hype文档都是由至少一个或许多个场景组成的。场景就像Keynote或PowerPoint中的页面一样，或者像HyperCard中的卡片一样。场景中包含元素和时间线。动作则是用来完成不同场景之间的变换的。</p>
       <h3 id=a-hrefelementselementsa><a href="#elements">Elements</a></h3>
-      <p>Elements are the manipulatable objects in a scene. They can be shapes, text, buttons, textured buttons, images, video, HTML widgets.</p>
+      <p>元素是像形状、文本、按钮、带有装饰的按钮、图像、视频、HTML widgets等可以操控的对象。</p>
       <h3 id=a-hrefmanipulating-elementspropertiesa><a href="#manipulating-elements">Properties</a></h3>
-      <p>Properties are the attributes which define an element’s style, positioning, and auxiliary information. Most properties are animatable. Properties are defined or changed by manipulating elements in Tumult Hype’s scene editor or by changing values in an inspector. Properties define, among many things, an element’s location, size, color, borders, or the effects applied to the element.</p>
-      <h3 id=a-hrefkeyframeskeyframesa><a href="#keyframes">Keyframes</a></h3>
-      <p>Keyframes define a property’s value at a specific time on a timeline.</p>
-      <h3 id=a-hrefanimationsanimationsa><a href="#animations/">Animations</a></h3>
-      <p>Animations change a property’s value over a period of time; they are defined by two keyframes that set the starting and ending values of the property’s animation. Tumult Hype automatically creates animations between any keyframes which have different values. Animations also have different easing effects, different rates of change, such as ease-in, ease-out, ease-in-out, instant, bounce, and linear. Furthermore, by using <a href="#motionpaths">motion paths</a>, elements can be animated along arbitrary complex curves.</p>
-      <h3 id=a-hreftimelinestimelinesa><a href="#timelines/">Timelines</a></h3>
+      <p>Properties are the attributes which define an element’s style, positioning, and auxiliary information. Most properties are animatable. Properties are defined or changed by manipulating elements in Tumult Hype’s scene editor or by changing values in an inspector. Properties define, among many things, an element’s location, size, color, borders, or the effects applied to the element.属性是能够用来确定元素的样式、位置以及一些辅助信息的Attributes。大部分属性是可动画化的。属性是由在场景编辑器中操作元素或者在检查器中改变数值来定义或者改变的。属性决定了元素的许多方面：位置、大小、颜色、边界或者元素的效果。</p>
+      <h3 id=a-hrefkeyframeskeyframesa><a href="#keyframes">关键帧</a></h3>
+      <p>关键帧能够在时间线上某一时间点上确定属性的数值。</p>
+      <h3 id=a-hrefanimationsanimationsa><a href="#animations/">动画</a></h3>
+      <p>Animations change a property’s value over a period of time;动画能够在一定时间段内改变一个属性的数值；它是被起始点和终止点的两个关键帧的属性的数值所决定的。Hype能够自动在任何拥有不同属性数值的关键帧之间添加动画。 they are defined by two keyframes that set the starting and ending values of the property’s animation. Tumult Hype automatically creates animations between any keyframes which have different values. Animations also have different easing effects, different rates of change, such as ease-in, ease-out, ease-in-out, instant, bounce, and linear. Furthermore, by using <a href="#motionpaths">motion paths</a>, elements can be animated along arbitrary complex curves.</p>
+      <h3 id=a-hreftimelinestimelinesa><a href="#timelines/">时间线</a></h3>
       <p>Timelines contain animations. Each scene has a Main Timeline, which is automatically started when the scene is shown. Scenes can have many timelines which can play in parallel, and actions are used to control timeline playback.</p>
       <h3 id=a-hrefactionsactionsa><a href="#actions/">Actions</a></h3>
       <p>Actions make your document interactive. Among other things, actions are used to change scenes, control timeline playback, start or stop sounds, or run custom JavaScript functions. Actions are triggered in response to user events, such as mouse clicks or tap gestures, and scene events, such as scene loading or timeline playback completion. Actions can also be placed on a timeline, to be triggered at a specific time.</p>
@@ -3251,10 +3251,10 @@ futuratot-bol-webfont.svg</pre>
         <ul id=sitemap>
           <li class=foothead> <a class=footheader href="//tumult.com/hype/">Tumult Hype 3</a>
             <ul class=sitemapchildren>
-              <li><a href="//tumult.com/hype/">Overview</a></li>
+              <li><a href="//tumult.com/hype/">Overview概览</a></li>
               <li><a href="//tumult.com/hype/#features">Features</a></li>
               <li><a href="//tumult.com/hype/documentation/">Documentation (Current Page)</a></li>
-              <li><a href="//tumult.com/hype/gallery/">Gallery</a></li>
+              <li><a href="//tumult.com/hype/gallery/">Gallery图库</a></li>
               <li><a href="//tumult.com/hype/tutorials/">Tutorials</a></li>
             </ul>
             <div class=divider></div>
